--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "audit": "^0.0.6",
     "cypress": "^9.6.1",
     "firebase": "^9.6.11",
+    "fix": "^0.0.3",
     "ngx-color-picker": "^12.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
